<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/contact_us_root"
    tools:context="com.links.links.ContactUsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/colorAccent"
        android:id="@+id/background_view"
        android:layout_alignParentBottom="true"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/activity_horizontal_margin"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="@dimen/my_default_mrgin"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/contact_us_cardview">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NEW MESSAGE"
                android:gravity="center"
                android:fontFamily="serif-monospace"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_margin="@dimen/activity_horizontal_margin"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:fontFamily="serif-monospace"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/hint_name_contact_us_message" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:fontFamily="serif-monospace"
                    android:singleLine="true"
                    android:hint="@string/hint_email_contact_us" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/input_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:singleLine="true"
                    android:hint="@string/hint_topic_contact_us" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_message"
                android:layout_width="match_parent"
                android:fontFamily="serif-monospace"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/input_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/hint_message_contact_us"
                    android:inputType="textCapSentences|textMultiLine"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="SEND"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/white"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:theme="@style/MyButton"
                android:onClick="onClick"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>
